Correcting alignment in secondary menu.#2819

--- a/openscholar/themes/hwpi_basetheme/css/responsive.nav.css
+++ b/openscholar/themes/hwpi_basetheme/css/responsive.nav.css
@@ -259,6 +259,7 @@ ul.primary li a {
 .region-header-third {
     margin-left: 0 !important;
     width: 100%!important;
+    float:left!important;
 }  
 	
 }
